# packer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  config.h.in  config.hpp.in
cmake/: dependecies.cmake  get_all_targets.cmake  pack_resources.cmake
example/: example_data.json  foobar.txt
example_app/: CMakeLists.txt
examples/: CMakeLists.txt
examples/data/: example_data.json  example_data_part2.json  file1.txt  file3.txt
examples/packer_in_use/: CMakeLists.txt  main.cpp
include/httplib/: httplib.h
include/packer/: Factory.hpp  Packer.hpp  PackerArgument.hpp  Utils.hpp
include/packer/pack_types/: KeyValuePackType.hpp  PackTypes.hpp  TogglePackType.hpp  TranslationPackType.hpp
include/packer/sinks/: PackSink.hpp  SqlitePackSink.hpp
include/packer/sources/: HttpPackSource.hpp  JsonPackSource.hpp  PackSource.hpp
lib/: CMakeLists.txt
lib/include/packer/: LogEntry.hpp  Packer.hpp  Toggle.hpp
lib/packer/: CMakeLists.txt
lib/packer/include/packer/: Packer.h  Reader.h  unpacker.h
lib/packer/sql/: get_file.sql  get_key.sql  get_latest_logs.sql  get_toggle.sql  get_translation.sql  insert_log.sql
lib/packer/src/: Packer.cpp  Reader.cpp  unpacker.cpp
src/: CMakeLists.txt  Factory.cpp  FilePackType.hpp  JsonPackSource.cpp  JsonPackSource.h  Pack.cpp  Pack.h  PackSink.h  PackSource.h  Packer.cpp  Packer.h  PackerArgument.cpp  PackerArgument.h  SqlitePackSink.cpp  SqlitePackSink.h  Utils.cpp  Utils.h  create_file_table.sql  create_store_table.sql  create_translation_table.sql  insert_file.sql  insert_translation.sql  main.cpp  schema.sql
src/options/: Flags.hpp  getopt.h
src/packTypes/: FilePackType.hpp  KeyValuePackType.hpp  PackTypes.h  TranslationPackType.hpp
src/sinks/: PackSink.h  SqlitePackSink.cpp  SqlitePackSink.h
src/sources/: HttpPackSource.cpp  JsonPackSource.cpp  JsonPackSource.h  PackSource.h
src/sql/: create_log_table.sql  create_store_table.sql  create_toggle_table.sql  insert_key_value.sql  insert_toggle.sql
src/utils/: Utils.cpp  getopt.cpp
